Fix Box And Our Work

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 D’ECCELLENZA OTTENUTO
               </p>
             </div>
-            <div data-aos="fade-up" data-aos-duration="3000">
+            <div>
               <p class="contact">
                 RICHIEDI UN SOPRALLUOGO GRATUITO E OTTIENI SUBITO UN PREVENTIVO
               </p>
