change our work

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <img src="image/services1.png" alt="" />
 
             <div class="content">
-              <h1>pavimentazioni</h1>
+              <h1>Pavimentazioni</h1>
               <p>
                 siamo specializzati in trattamenti di ogni tipo di pavimento:
                 cotto, pietre naturali, parquet etc…
@@ -134,7 +134,7 @@
             <img src="image/services2.png" alt="" />
 
             <div class="content">
-              <h1>vetri e specchi</h1>
+              <h1>Vetri e Specchi</h1>
               <p>
                 DECAPAGGIO VETRATE A FINE CANTIERE, TRATTAMENTO SPECCHI, ACCIAI,
                 OTTONI, VETRI E VETRATE (A EFFETTO SCOMPARSA) ELIMINAZIONE DEGLI
@@ -151,8 +151,8 @@
             <img src="image/services3.png" alt="" />
 
             <div class="content">
-              <h1>ACCIAIO INOX</h1>
-              <p>(PASSIVAZIONE E DISOSSIDAZIONE), CUCINE INDUSTRIALI.</p>
+              <h1>Acciaio Inox</h1>
+              <p>(PASSIVAZIONE E DISOSSIDAZIONE), CUCINE INDUSTRIALI...</p>
             </div>
           </div>
         </div>
