--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
             <h4>Seguici sui social</h4>
 
             <ul class="social">
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-              <a href=""><i class="fa-brands fa-tiktok"></i></a>
+              <a href="https://www.instagram.com/laperladelmediterraneo123/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.tiktok.com/@sosososo603"><i class="fa-brands fa-tiktok"></i></a>
               <a href=""><i class="fa-brands fa-facebook-f"></i></a>
            </ul>
           </div>
