--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="gruppo di professionisti specializzati nel settore della detergenza per 
+    risolvere (OVE SIA POSSIBILE) i diversi problemi, che si presentano nelle pulizie ordinarie e straordinarie nel 
+    rispetto dei diversi supporti, sia nel settore privato e alberghiero sia nel settore">
+    <meta name="keywords" content="pulizia, Impresa Di Pulizie, Pulizie Appartamenti, Ville, Uffici, Industrie, Alberghi, Pavimentazioni, Vetri e Specchi, Acciaio Inox, Altro, cotto, pietre naturali, parquet, decapaggio vetrate a fine cantiere, trattamento specchi, acciai, ottoni, vetri e vetrate, (passivazione e disossidazione), cucine industriali, decapaggio servizi sanitari cabina docce,trattamento, a lungo effetto, anti muffe, lichene, vellutello, Siamo ad Aprilia, impresa di pulizie aSiamo ad Aprilia">
+    <meta name="author" content="Hashem Mdoukh">
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -14,7 +19,7 @@
     <header>
       <div class="container">
         <a href="#hero-section" class="logo">
-          <img src="image/logo.png" alt="" />
+          <img src="image/logo.png" alt="LA PERLA DEL MEDITERRANEO" />
         </a>
 
         <div class="links">
@@ -78,7 +83,7 @@
 
             <div data-aos="fade-left" data-aos-duration="3000">
               <div class="image">
-                <img src="image/img-hero-section.png" alt="" />
+                <img src="image/img-hero-section.png" alt="Pulizie case, enti, aziende, abitazioni, pavimenti, vetri e specchi, alluminio, cucine, hotel" />
               </div>
             </div>
         </div>
@@ -93,7 +98,7 @@
     <div class="about-us" id="about-us">
       <div class="container">
         <div class="image" data-aos="fade-right" data-aos-duration="2000">
-          <img src="image/About-us.png" alt="" />
+          <img src="image/About-us.png" alt="LA PERLA DEL MEDITERRANEO" />
         </div>
 
         <div class="text">
@@ -118,7 +123,7 @@
           data-aos-duration="1500"
         >
           <div class="ser-box">
-            <img src="image/services1.png" alt="" />
+            <img src="image/services1.png" alt="pulizia Pavimentazioni" />
 
             <div class="content">
               <h1>Pavimentazioni</h1>
@@ -131,7 +136,7 @@
         </div>
         <div data-aos="fade-up" data-aos-duration="1500">
           <div class="ser-box">
-            <img src="image/services2.png" alt="" />
+            <img src="image/services2.png" alt="pulizia Vetri e Specchi" />
 
             <div class="content">
               <h1>Vetri e Specchi</h1>
@@ -148,7 +153,7 @@
           data-aos-duration="1500"
         >
           <div class="ser-box">
-            <img src="image/services3.png" alt="" />
+            <img src="image/services3.png" alt="pulizia Acciaio Inox" />
 
             <div class="content">
               <h1>Acciaio Inox</h1>
@@ -161,7 +166,7 @@
           data-aos-duration="1500"
         >
           <div class="ser-box">
-            <img src="image/services4.png" alt="" />
+            <img src="image/services4.png" alt="pulizia Altro" />
 
             <div class="content">
               <h1>Altro</h1>
@@ -183,32 +188,32 @@
         </div>
         <div class="container">
             <div class="image" data-aos="fade-right" data-aos-duration="2500">
-              <img src="image/Before.png" alt="">
+              <img src="image/Before.png" alt="pulizia del bagno">
             </div>
             
             <div class="content">
               <div class="box">
                 <div class="image-small" data-aos="fade-up" data-aos-duration="2500">
-                  <img src="image/Befoer-1.png" alt="">
+                  <img src="image/Befoer-1.png" alt="pulizia Acciaio Inox">
                 </div>
                 <div class="image-small" data-aos="fade-down" data-aos-duration="2500">
-                  <img src="image/Before-2.png" alt="">
+                  <img src="image/Before-2.png" alt="pulizia Pavimentazioni">
                 </div>
               </div>
               <div class="box">
                 <div class="image-small" data-aos="fade-up" data-aos-duration="2500">
-                  <img src="image/Before-3.png" alt="">
+                  <img src="image/Before-3.png" alt="pulire le pareti"">
                 </div>
                 <div class="image-small" data-aos="fade-down" data-aos-duration="2500">
-                  <img src="image/Before-4.png" alt="">
+                  <img src="image/Before-4.png" alt="pulizia Pavimentazioni">
                 </div>
               </div>
               <div class="box">
                 <div class="image-small" data-aos="fade-up" data-aos-duration="2500">
-                  <img src="image/Before-5.png" alt="">
+                  <img src="image/Before-5.png" alt="pulizia del bagno">
                 </div>
                 <div class="image-small" data-aos="fade-down" data-aos-duration="2500">
-                  <img src="image/Before-6 .png" alt="">
+                  <img src="image/Before-6 .png" alt="pulizia Pavimentazioni">
                 </div>
               </div>
             </div>
@@ -222,7 +227,7 @@
         </div>
       <div class="container">
         <div class="test-box" data-aos="fade-right" data-aos-duration="3000">
-          <img src="image/perosn.jpeg" alt="">
+          <img src="image/perosn.jpeg" alt="customer">
           <h2>Noemi carletti</h2>
           <p>
             Professionalità ed attenzione ai minimi dettagli sono le qualità che contraddistinguono questa ditta delle pulizie. 
@@ -231,7 +236,7 @@
           </p>
         </div>
         <div class="test-box" data-aos="fade-up" data-aos-duration="3000">
-            <img src="image/person-1.png" alt="">
+            <img src="image/person-1.png" alt="customer">
             <h2>Federico casale</h2>
             <p>
               Impresa di pulizie consigliatissima. Li ho contattati per fare le pulizie dopo la consegna di una nuova costruzione (vi lascio immaginare la condizione del pavimento).
@@ -240,7 +245,7 @@
             </p>
         </div>
         <div class="test-box" data-aos="fade-left" data-aos-duration="3000">
-            <img src="image/person-2.png" alt="">
+            <img src="image/person-3.jpg" alt="customer">
             <h2>Sonia martino </h2>
             <p>
               La mia è assolutamente una Esperienza molto positiva, la professionalità è la prima cosa che si nota già dal sopralluogo. 
@@ -255,7 +260,7 @@
       <div class="container">
         <div class="footer-box">
           <div class="logo">
-            <img src="image/footer-logo.png" alt="">
+            <img src="image/footer-logo.png" alt="LA PERLA DEL MEDITERRANEO">
 
             <h4>Seguici sui social</h4>
 
