--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="description" content="LA PERLA DEL MEDITERRANEO è un gruppo di professionisti specializzati nel settore della detergenza per 
     risolvere (OVE SIA POSSIBILE) i diversi problemi, che si presentano nelle pulizie ordinarie e straordinarie nel 
     rispetto dei diversi supporti, sia nel settore privato e alberghiero sia nel settore industriale.">
-    <meta name="google-site-verification" content="google-site-verification=X0WnZ6clGISVxXRQ8Zj-wfZZEIUUj3J-Ef_BbCAs9BE" />
-    <meta name="keywords" content="pulizia, Impresa Di Pulizie, Pulizie Appartamenti, Ville, Uffici, Industrie, Alberghi, Pavimentazioni, Vetri e Specchi, Acciaio Inox, Altro, cotto, pietre naturali, parquet, decapaggio vetrate a fine cantiere, trattamento specchi, acciai, ottoni, vetri e vetrate, (passivazione e disossidazione), cucine industriali, decapaggio servizi sanitari cabina docce,trattamento, a lungo effetto, anti muffe, lichene, vellutello, Siamo ad Aprilia, impresa di pulizie aSiamo ad Aprilia">
+    <meta name="google-site-verification" content="X0WnZ6clGISVxXRQ8Zj-wfZZEIUUj3J-Ef_BbCAs9BE" />    <meta name="keywords" content="pulizia, Impresa Di Pulizie, Pulizie Appartamenti, Ville, Uffici, Industrie, Alberghi, Pavimentazioni, Vetri e Specchi, Acciaio Inox, Altro, cotto, pietre naturali, parquet, decapaggio vetrate a fine cantiere, trattamento specchi, acciai, ottoni, vetri e vetrate, (passivazione e disossidazione), cucine industriali, decapaggio servizi sanitari cabina docce,trattamento, a lungo effetto, anti muffe, lichene, vellutello, Siamo ad Aprilia, impresa di pulizie aSiamo ad Aprilia">
     <meta name="robots" content="noindex,follow"/>
     <meta name="author" content="Hashem Mdoukh">
     <link rel="stylesheet" href="css/all.min.css" />
